# beqcatalogue

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  Pipfile  README.md  aron7awol.diff  aron7awol.first.csv  aron7awol.last.csv  aron7awol.sha  aron7awol.times.csv  beqwiki.patch  halcyon888.diff  halcyon888.sha  halcyon888.times.csv  kaelaria.diff  kaelaria.sha  kaelaria.times.csv  kaeleria.sha  mkdocs.yml  mobe1969.diff  mobe1969.first.csv  mobe1969.last.csv  mobe1969.sha  mobe1969.times.csv  pyproject.toml  remixmark.diff  remixmark.sha  remixmark.times.csv  t1g8rsfan.diff  t1g8rsfan.sha  t1g8rsfan.times.csv  update_inputs.sh
.github/: dependabot.yml
.travis/: push.sh
beqcatalogue/: __init__.py  iir.py  issues.py
docs/: 56612552.md  56612558.md  56612560.md  56613242.md  56613830.md  56618096.md  56623286.md  56626250.md  56626708.md  56637484.md  56662114.md  56693206.md  56693610.md  56694226.md  56698012.md  56700386.md  56701347.md  56702620.md  56714208.md  56720154.md  56720236.md  56720998.md  56721056.md  56721112.md  56732998.md  56733086.md  56733120.md  56733146.md  56733164.md  56733902.md  56733932.md  56733956.md  56733992.md  56734284.md  56734470.md  56734568.md  56734614.md  56735472.md  56735602.md  56735650.md  (+1308 more)
meta/: aron7awol.diff  aron7awol.sha  aron7awol.times.csv  bombaycat007.diff  bombaycat007.sha  bombaycat007.times.csv  halcyon888.diff  halcyon888.sha  halcyon888.times.csv  kaelaria.diff  kaelaria.errors  kaelaria.sha  kaelaria.times.csv  mikejl.diff  mikejl.errors  mikejl.sha  mikejl.times.csv  mobe1969.sha  (+8 more)
(+12547 files in other folders)
