[project]
name = "beqcatalogue"
version = "0.0.1"
description = "A website for browsing the beqcatalogue"
authors = [
    { name = "3ll3d00d", email = "mattkhan+beqc@gmail.com" }
]
license = "MIT"
readme = "README.md"
homepage = "https://beqcatalogue.readthedocs.io/"
repository = "https://github.com/3ll3d00d/beqcatalogue"
requires-python = ">=3.13, <3.14"
dependencies = [
    "jinja2 >= 2.11.3",
    "githubkit"
]

[tool.poetry.group.dev.dependencies]
mkdocs = "*"
mkdocs-material = "*"
pymdown-extensions = ">=10.0"
requests = ">=2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
